syntax = "proto3";

package core;

message Empty {}

message EntityId {
  int32 id = 1;
}